--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,5 @@
 * text=auto
 *.png filter=lfs diff=lfs merge=lfs -text
 *.jpg filter=lfs diff=lfs merge=lfs -text
+*.data filter=lfs diff=lfs merge=lfs -text
+*.wasm filter=lfs diff=lfs merge=lfs -text
