--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@web3auth/base": "^9.4.0",
     "@web3auth/ethereum-provider": "^9.4.0",
     "@web3auth/no-modal": "^9.4.0",
+    "axios": "^1.7.7",
     "bufferutil": "^4.0.8",
     "ethers": "^6.13.2",
     "next": "13.4.9",
